Tweaks and fixes

--- a/everything-about-cron-post.org
+++ b/everything-about-cron-post.org
@@ -26,19 +26,20 @@
 
    В 1987 году Пол Викси (англ. [[https://en.wikipedia.org/wiki/Paul_Vixie][Paul Vixie]]), опросив пользователей Unix на предмет пожеланий к cron,
    выпустил свою версию демона, которая исправляла ключевые проблемы традиционных cron и расширила
-   стандартный синтаксис файлов-табличек.
+   стандартный синтаксис файлов-таблиц.
 
-   У Vixie Cron была очень либеральная лицензия, верней, вообще никакой лицензии помимо пожеланий в
-   README: гарантий автор не дает, имя автора удалять нельзя, а продавать программу можно только
-   вместе с исходным кодом. Эти требования совместимы с принципами набиравшего в те годы
-   популярность свободного ПО, поэтому некоторые ключевые из появившихся в начале 90-х дистрибутивов
-   Linux взяли Vixie Cron в качестве системного cron и развивают его до сих пор.
+   У Vixie Cron была очень либеральная лицензия, верней, вообще никакой лицензии, если не считать
+   пожеланий в README: гарантий автор не дает, имя автора удалять нельзя, а продавать программу
+   можно только вместе с исходным кодом. Эти требования совместимы с принципами набиравшего в те
+   годы популярность свободного ПО, поэтому некоторые ключевые из появившихся в начале 90-х
+   дистрибутивов Linux взяли Vixie Cron в качестве системного cron и развивают его до сих пор.
 
-   В частности, RedHat и Suse развивают форк Vixie Cron - cronie; а Debian (а вместе с ним и Ubuntu)
-   используют фактически оригинальное издание Vixie Cron с небольшими патчами.
+   В частности, RedHat и Suse развивают форк Vixie Cron - cronie; а Debian (и Ubuntu) используют
+   оригинальное издание Vixie Cron с небольшими патчами.
 
    Давайте для начала познакомимся с описанной в POSIX стандартной утилитой crontab, после чего
-   разберем Vixie Cron и специфичные для популярных дистрибутивов версии.
+   разберем расширения Vixie Cron и использование вариантов Vixie Cron в популярных дистрибутивах.
+   И, наконец, вишенка на торте - подробный разбор устройства самого демона.
 
 ** POSIX Crontab
 
@@ -113,6 +114,12 @@
 
 ** TODO Хит продаж - Vixie Cron
 ** TODO Vixie Cron в Debian и Ubuntu
+
+   TODO: repo link
+
 ** TODO Vixie Cron в RedHat, Fedora и CentOS
+
+   TODO: repo link
+
 ** TODO Устройство Vixie Cron
 ** TODO Альтернативы
