--- a/everything-about-cron-post.org
+++ b/everything-about-cron-post.org
@@ -1,15 +1,20 @@
 * Cron: история, популярные версии, использование и устройство
+** TODO Аннотация
 
-** Происхождение видов
+   Сослаться на статью Алексея.
+
+** TODO Содержание
+** Происхождение видов на пальцах
 
    Периодическое выполнение пользовательских или системных программ - очевидная необходимость во
    всех операционных системах. Поэтому необходимость в сервисах, позволяющих централизованно
    планировать и выполнять такие работы, осозналась программистами очень рано.
 
    Unix-подобные операционные системы ведут свою родословную от [[https://en.wikipedia.org/wiki/Version_7_Unix][Version 7 Unix]], разработанного в
-   70-х годах прошлого века в [[https://en.wikipedia.org/wiki/Bell_Labs][Bell Labs]]. Эта операционная система стала прародителем двух крупных
-   семейств ОС: BSD-подобных и SysV-подобных. Вместе c Version 7 Unix поставлялся и сервис cron,
-   позволявший регулярно выполнять задачи суперпользователя.
+   70-х годах прошлого века в [[https://en.wikipedia.org/wiki/Bell_Labs][Bell Labs]] в том числе и знаменитым Кеном Томпсоном (англ. [[https://en.wikipedia.org/wiki/Ken_Thompson][Ken
+   Thompson]]). Эта операционная система стала прародителем двух крупных семейств ОС: BSD-подобных и
+   SysV-подобных. Вместе c Version 7 Unix поставлялся и сервис cron, позволявший регулярно выполнять
+   задачи суперпользователя.
 
    Типичный современный cron - несложная программа, но алгоритм работы оригинального варианта был
    совсем простым: сервис просыпался раз в минуту, читал табличку с задачами из единственного файл
@@ -41,7 +46,7 @@
    разберем расширения Vixie Cron и использование вариантов Vixie Cron в популярных дистрибутивах.
    И, наконец, вишенка на торте - подробный разбор устройства самого демона.
 
-** POSIX Crontab
+** POSIX crontab
 
    Если оригинальный cron всегда работал для суперпользователя, то современные планировщики имеют
    дело с задачами обычных пользователей - так безопасней и удобней.
@@ -55,7 +60,9 @@
 
    Вызовами стандартного crontab можно сделать только четыре вещи: отредактировать пользовательскую
    таблицу задач в редакторе, загрузить таблицу из файла, показать текущую таблицу задач и очистить
-   таблицу задач. Примеры:
+   таблицу задач. С точки зрения пользователя для запуска задач больше ничего не требуется.
+
+   Примеры работы утилиты crontab:
 
    #+BEGIN_SRC shell
    crontab -e # редактировать таблицу задач
@@ -112,14 +119,107 @@
 
    Примечательно, что POSIX ничего не говорит о том, откуда берутся значения для этих переменных.
 
-** TODO Хит продаж - Vixie Cron
+** Хит продаж - Vixie Cron V3
+
+   Общий предок популярных версий cron - Vixie Cron V3, основные возможности которого мы рассмотрим
+   подробней.
+
+   Vixie Cron поставляется в двух программах (cron и crontab). Демон Cron отвечает за чтение и
+   запуск задач из системной таблицы задач и таблиц задач отдельных пользователей. Crontab -
+   редактирование пользовательских таблиц.
+
+*** Расположение таблиц задач
+
+    Таблица задач суперпользователя расположена в /etc/crontab. Синтаксис системной таблицы имеют
+    общий для Vixie Cron синтаксис с поправкой на то, что в ней шестой колонкой указывается имя
+    пользоваеля, от которого запускается задача:
+
+    #+BEGIN_SRC crontab
+    # Запускается ежеминутно от пользователя vlad
+    * * * * * * vlad /path/to/exec
+    #+END_SRC
+
+    Таблицы задач обычных пользователей располагаются в /var/cron/tabs/username и используют общий
+    синтаксис. При запуске утилиты crontab от имени пользователя редактируются именно эти файлы.
+
+*** Расширенный синтаксис
+
+   По сравнению с POSIX crontab Пол Викси добавил несколько очень полезных модицикаций в синтаксис
+   таблиц задач утилиты.
+
+   Стал доступен расширенный синтаксис таблиц, например, можно указывать дни недели или месяцы
+   поименно (Mon, Tue и так далее):
+
+   #+BEGIN_SRC crontab
+   # Запускается ежеминутно по понедельникам и вторникам в январе
+   * * * Jan Mon,Tue * /path/to/exec
+   #+END_SRC
+
+   Можно указывать шаг, через который запускаются задачи:
+
+   #+BEGIN_SRC crontab
+   # Запускается каждую вторую минуту
+   */2 * * * Mon,Tue /path/to/exec
+   #+END_SRC
+
+   Шаги и интервалы можно смешивать:
+
+   #+BEGIN_SRC crontab
+   # Запускается каждую вторую минуту первых десяти минут каждого часа
+   0-10/2 * * * * * /path/to/exec
+   #+END_SRC
+
+   Поддерживаются интуитивные альтернативы обычному синтаксису: reboot, yearly, annually, monthly,
+   weekly, daily, midnight, hourly:
+
+   #+BEGIN_SRC crontab
+   # Запускается после перезагрузки системы
+   @reboot /exec/on/reboot
+   # Запускается раз в день
+   @daily /exec/daily
+   # Запускается раз в час
+   @hourly /exec/daily
+   #+END_SRC
+
+*** Среда выполнения задач
+
+   Vixie Cron позволяет менять окружение запускаемых приложений.
+
+   Изначально переменные окружения USER, LOGNAME и HOME не просто предоставляются демоном, а берутся
+   по умолчанию из файла [[https://en.wikipedia.org/wiki/Passwd][passwd]]. Переменная PATH по умолчанию получает значение "/usr/bin:/bin/", а
+   SHELL - "/bin/sh". Значения всех переменных кроме LOGNAME можно изменить в таблицах
+   пользователей.
+
+   Некоторые переменные окружения (прежде всего SHELL и HOME) используются самим cron для запуска
+   задачи. Вот, например, использование bash вместо стандартного sh для запуска задач:
+
+   #+BEGIN_SRC crontab
+   SHELL=/bin/bash
+   HOME=/tmp/
+   # exec будет запущен bash-ем в /tmp/
+   * * * * * /path/to/exec
+   #+END_SRC
+
+   В конечном итоге все определенные в таблице переменные окружения (используемые cron или
+   необходимые процессу) будут переданы запущенной задаче.
+
 ** TODO Vixie Cron в Debian и Ubuntu
+
+   based on Vixie Cron v3
+
+   TODO: no passwd
 
    TODO: repo link
 
 ** TODO Vixie Cron в RedHat, Fedora и CentOS
 
+   based on Vixie Cron v4.1
+
    TODO: repo link
 
 ** TODO Устройство Vixie Cron
-** TODO Альтернативы
+** TODO Выводы
+
+   TODO: альтернативы
+
+   TODO: указать, что надо обращаться к документации каждой из платформ
