allow/deny files in Vixie Cron

--- a/everything-about-cron-post.org
+++ b/everything-about-cron-post.org
@@ -128,7 +128,7 @@
    запуск задач из системной таблицы задач и таблиц задач отдельных пользователей. Crontab -
    редактирование пользовательских таблиц.
 
-*** Расположение таблиц задач
+*** Расположение таблиц задач и файлов конфигурации
 
     Таблица задач суперпользователя расположена в /etc/crontab. Синтаксис системной таблицы имеют
     общий для Vixie Cron синтаксис с поправкой на то, что в ней шестой колонкой указывается имя
@@ -141,6 +141,9 @@
 
     Таблицы задач обычных пользователей располагаются в /var/cron/tabs/username и используют общий
     синтаксис. При запуске утилиты crontab от имени пользователя редактируются именно эти файлы.
+
+    Управление списками пользователей, имеющих доступ к crontab, происходит в файлах //var/cron/allow
+    и //var/cron/deny/, куда достаточно внести имя пользователя отдельной строкой.
 
 *** Расширенный синтаксис
 
