editor for crontab

--- a/everything-about-cron-post.org
+++ b/everything-about-cron-post.org
@@ -206,6 +206,10 @@
    В конечном итоге все определенные в таблице переменные окружения (используемые cron или
    необходимые процессу) будут переданы запущенной задаче.
 
+   Для редактирования файлов утилитой crontab используется редактор указанный в переменных окружения
+   VISUAL или EDITOR. Если в среде, где был запущен crontab, эти переменные не определены, то
+   используется "/usr/ucb/vi".
+
 ** TODO Vixie Cron в Debian и Ubuntu
 
    based on Vixie Cron v3
