--- a/everything-about-cron-post.org
+++ b/everything-about-cron-post.org
@@ -4,6 +4,7 @@
    Сослаться на статью Алексея.
 
 ** TODO Содержание
+
 ** Происхождение видов на пальцах
 
    Периодическое выполнение пользовательских или системных программ - очевидная необходимость во
@@ -25,26 +26,27 @@
    Unix-подобными операционными системами поставлялись те или иные варианты cron с похожим - но
    усовершенствованным - интерфейсом.
 
-   Обобщенное описание формата crontab и базовых принципов работы утилиты было включено уже во
-   второе издание главного стандарта Unix-подобных операционных систем - [[https://en.wikipedia.org/wiki/POSIX][POSIX]] - и, таким образом,
-   cron из стандарта де-факто стал стандартом де-юре.
+   Обобщенное описание формата crontab и базовых принципов работы утилиты в 92-ом году было включено
+   в главный стандарт Unix-подобных операционных систем - [[https://en.wikipedia.org/wiki/POSIX][POSIX]] - и, таким образом, cron из
+   стандарта де-факто стал стандартом де-юре.
 
    В 1987 году Пол Викси (англ. [[https://en.wikipedia.org/wiki/Paul_Vixie][Paul Vixie]]), опросив пользователей Unix на предмет пожеланий к cron,
    выпустил свою версию демона, которая исправляла ключевые проблемы традиционных cron и расширила
    стандартный синтаксис файлов-таблиц.
 
-   У Vixie Cron была очень либеральная лицензия, верней, вообще никакой лицензии, если не считать
-   пожеланий в README: гарантий автор не дает, имя автора удалять нельзя, а продавать программу
-   можно только вместе с исходным кодом. Эти требования совместимы с принципами набиравшего в те
-   годы популярность свободного ПО, поэтому некоторые ключевые из появившихся в начале 90-х
-   дистрибутивов Linux взяли Vixie Cron в качестве системного cron и развивают его до сих пор.
+   Vixie cron к 3-ей версии стал отвечать требованиям POSIX, к тому же у программы была либеральная
+   лицензия, верней, вообще никакой лицензии, если не считать пожеланий в README: гарантий автор не
+   дает, имя автора удалять нельзя, а продавать программу можно только вместе с исходным кодом. Эти
+   требования оказались совместимы с принципами набиравшего в те годы популярность свободного ПО,
+   поэтому некоторые ключевые из появившихся в начале 90-х дистрибутивов Linux взяли Vixie cron в
+   качестве системного cron и развивают его до сих пор.
 
-   В частности, RedHat и Suse развивают форк Vixie Cron - cronie; а Debian (и Ubuntu) используют
-   оригинальное издание Vixie Cron с небольшими патчами.
+   В частности, RedHat и Suse развивают форк Vixie cron - cronie; а Debian (и Ubuntu) используют
+   оригинальное издание Vixie cron со множеством патчей.
 
    Давайте для начала познакомимся с описанной в POSIX стандартной утилитой crontab, после чего
-   разберем расширения Vixie Cron и использование вариантов Vixie Cron в популярных дистрибутивах.
-   И, наконец, вишенка на торте - подробный разбор устройства самого демона.
+   разберем расширения Vixie cron и использование вариантов Vixie cron в популярных дистрибутивах.
+   И, наконец, вишенка на торте - подробный разбор устройства демона cron.
 
 ** POSIX crontab
 
@@ -119,19 +121,19 @@
 
    Примечательно, что POSIX ничего не говорит о том, откуда берутся значения для этих переменных.
 
-** Хит продаж - Vixie Cron V3
+** Хит продаж - Vixie cron 3.0pl1
 
-   Общий предок популярных версий cron - Vixie Cron V3, основные возможности которого мы рассмотрим
-   подробней.
+   Общий предок популярных вариантов cron - Vixie cron 3.0pl1, опубликованный в comp.sources.unix.
+   Основные возможности этой версии мы и рассмотрим подробней.
 
-   Vixie Cron поставляется в двух программах (cron и crontab). Демон Cron отвечает за чтение и
-   запуск задач из системной таблицы задач и таблиц задач отдельных пользователей. Crontab -
-   редактирование пользовательских таблиц.
+   Vixie cron поставляется в двух программах (cron и crontab). Демон cron отвечает за чтение и
+   запуск задач из системной таблицы задач и таблиц задач отдельных пользователей. Утилита crontab -
+   за редактирование пользовательских таблиц.
 
-*** Расположение таблиц задач и файлов конфигурации
+*** Таблиц задач и файлы конфигурации
 
     Таблица задач суперпользователя расположена в /etc/crontab. Синтаксис системной таблицы имеют
-    общий для Vixie Cron синтаксис с поправкой на то, что в ней шестой колонкой указывается имя
+    общий для Vixie cron синтаксис с поправкой на то, что в ней шестой колонкой указывается имя
     пользоваеля, от которого запускается задача:
 
     #+BEGIN_SRC crontab
@@ -186,7 +188,7 @@
 
 *** Среда выполнения задач
 
-   Vixie Cron позволяет менять окружение запускаемых приложений.
+   Vixie cron позволяет менять окружение запускаемых приложений.
 
    Изначально переменные окружения USER, LOGNAME и HOME не просто предоставляются демоном, а берутся
    по умолчанию из файла [[https://en.wikipedia.org/wiki/Passwd][passwd]]. Переменная PATH по умолчанию получает значение "/usr/bin:/bin/", а
@@ -194,7 +196,8 @@
    пользователей.
 
    Некоторые переменные окружения (прежде всего SHELL и HOME) используются самим cron для запуска
-   задачи. Вот, например, использование bash вместо стандартного sh для запуска задач:
+   задачи. Вот как может выглядеть использование bash вместо стандартного sh для запуска
+   пользовательских задач:
 
    #+BEGIN_SRC crontab
    SHELL=/bin/bash
@@ -210,21 +213,36 @@
    VISUAL или EDITOR. Если в среде, где был запущен crontab, эти переменные не определены, то
    используется "/usr/ucb/vi".
 
-** TODO Vixie Cron в Debian и Ubuntu
+** TODO cron в Debian и Ubuntu
 
-   based on Vixie Cron v3
+   based on Vixie cron 3.0pl1
 
-   TODO: no passwd
+   TODO: launching through systemd
+
+   TODO: /etc/crontab
+
+   TODO: расположение стандартных файлов и запуск /etc/cron.d
+
+   TODO: passwd reading and difference
+
+   TODO: syntax additions?
+
+   TODO: mention SELinux, PAM
+
+   TODO: mention default shell
+
+** TODO cronie в RedHat, Fedora и CentOS
+
+   based on Vixie cron v4.1
+
+   TODO: mention default shell
 
    TODO: repo link
 
-** TODO Vixie Cron в RedHat, Fedora и CentOS
+** TODO Устройство Vixie cron
 
-   based on Vixie Cron v4.1
+   именно оригинального, код там почище
 
-   TODO: repo link
-
-** TODO Устройство Vixie Cron
 ** TODO Выводы
 
    TODO: альтернативы
