--- a/everything-about-cron-post.org
+++ b/everything-about-cron-post.org
@@ -1,11 +1,13 @@
 * Cron: история, популярные версии, использование и устройство
 ** TODO Аннотация
 
-   Сослаться на статью Алексея.
+   TODO: Сослаться на статью Алексея.
+   TODO: красивая цитата
+   TODO: BI и старые юниксовые утилиты
 
 ** TODO Содержание
 
-** Происхождение видов на пальцах
+** Происхождение видов
 
    Периодическое выполнение пользовательских или системных программ - очевидная необходимость во
    всех операционных системах. Поэтому необходимость в сервисах, позволяющих централизованно
@@ -32,7 +34,7 @@
 
    В 1987 году Пол Викси (англ. [[https://en.wikipedia.org/wiki/Paul_Vixie][Paul Vixie]]), опросив пользователей Unix на предмет пожеланий к cron,
    выпустил свою версию демона, которая исправляла ключевые проблемы традиционных cron и расширила
-   стандартный синтаксис файлов-таблиц.
+   синтаксис файлов-таблиц.
 
    Vixie cron к 3-ей версии стал отвечать требованиям POSIX, к тому же у программы была либеральная
    лицензия, верней, вообще никакой лицензии, если не считать пожеланий в README: гарантий автор не
@@ -57,8 +59,9 @@
    cron и доступная пользователям программа crontab. Последняя позволяет редактировать таблички
    задач, специфичные для каждого пользователя в системе.
 
-   В стандарте POSIX никак не описывается поведение демона, формализована только пользовательская
-   программа [[https://pubs.opengroup.org/onlinepubs/9699919799/utilities/crontab.html][crontab]].
+   В [[https://www.unix.com/man-page/POSIX/1posix/crontab/][стандарте POSIX]] никак не описывается поведение демона и формализована только пользовательская
+   программа [[https://pubs.opengroup.org/onlinepubs/9699919799/utilities/crontab.html][crontab]]. Существование каких-либо механизмов запуска пользовательских задач, конечно,
+   подразумевается, но не описано подробно.
 
    Вызовами стандартного crontab можно сделать только четыре вещи: отредактировать пользовательскую
    таблицу задач в редакторе, загрузить таблицу из файла, показать текущую таблицу задач и очистить
@@ -213,35 +216,62 @@
    VISUAL или EDITOR. Если в среде, где был запущен crontab, эти переменные не определены, то
    используется "/usr/ucb/vi".
 
-** TODO cron в Debian и Ubuntu
+** cron в Debian и Ubuntu
 
-   based on Vixie cron 3.0pl1
+   Разработчики Debian и производных дистрибутивов [[https://salsa.debian.org/debian/cron][сильно модифицированную версию]] Vixie cron 3.0pl1.
+   Отличий в синтаксисе файлов-таблиц нет, с точки зрения пользователей это тот же самый Vixie cron.
+   Крупнейшие новые возможности: поддержка [[https://en.wikipedia.org/wiki/Syslog][syslog]], [[https://en.m.wikipedia.org/wiki/Security-Enhanced_Linux][SELinux]] и [[https://en.wikipedia.org/wiki/Linux_PAM][PAM]].
 
-   TODO: launching through systemd
+   Из менее трудозатратных, но осязаемых изменений - расположение ключевых конфигурационных файлов и
+   таблиц задач.
 
-   TODO: /etc/crontab
+   Пользовательские таблицы в Debian располагаются в директории /var/spool/cron/crontabs, системная
+   таблица все там же - в /etc/crontab. Специфичные для пакетов Debian таблицы задач теперь
+   помещаются в //etc/cron.d/, откуда демон cron их автоматически считывает. Управление доступом
+   пользователей регулируется в файлах /etc/cron.allow и /etc/cron.deny.
 
-   TODO: расположение стандартных файлов и запуск /etc/cron.d
+   В качестве командной оболочки по умолчанию по-прежнему используется //bin/sh/, в роли которыго в
+   Debian выступает небольшой POSIX-совместимый шелл [[http://man7.org/linux/man-pages/man1/dash.1.html][dash]], запущенный без чтения какой-либо
+   конфиграции (в неинтерактивном режиме).
 
-   TODO: passwd reading and difference
+   Сам cron в последних версиях Debian запускается через systemd, а конфигурацию запуска можно
+   посмотреть в /lib/systemd/system/cron.service. Ничего особенного в конфигурации сервиса нет,
+   любое более тонкое управление задачами возможно сделать через переменные окружения, объявленные
+   прямо в crontab-ах каждого из пользователей.
 
-   TODO: syntax additions?
+** cronie в RedHat, Fedora и CentOS
 
-   TODO: mention SELinux, PAM
+   [[https://github.com/cronie-crond/cronie][Cronie]] - форк Vixie cron версии 4.1. Как и в Debian синтаксис не менялся, но добавлена поддержка
+   PAM и SELinux, работы в кластере, слежение за файлами при помощи inotify и других новых
+   возможностей.
 
-   TODO: mention default shell
+   Конфигурация по умолчанию находится в обычных местах: системная таблица в /etc/crontab, пакеты
+   помещают свои таблицы в /etc/cron.d/, пользовательские таблицы попадают в /var/spool/cron/crontabs.
 
-** TODO cronie в RedHat, Fedora и CentOS
+   Демон запускается под управлением systemd, конфигурация сервиса -
+   /lib/systemd/system/crond.service.
 
-   based on Vixie cron v4.1
-
-   TODO: mention default shell
-
-   TODO: repo link
+   В Redhat-подобных дистрибутивах при запуске по умолчанию используется /bin/sh, в роли которого
+   выступает стандартный bash. Надо заметить, что при запуске задач cron через /bin/sh командная
+   оболочка bash запускается в POSIX-совместимом режиме, и *не читает* никакой дополнительной
+   конфигурации - работает в неинтерактивном режиме.
 
 ** TODO Устройство Vixie cron
 
-   именно оригинального, код там почище
+   TODO: original once per minute -> williams -> once per minute again (cronie and inotify?)
+   TODO: job collection into a unified table
+   TODO: main loop and time correction
+   TODO: job launch procedure
+   TODO: @reboot
+   TODO: pid
+
+   Современные потомки cron по сравнению с Vixie cron не изменились радикально, но все же
+   представляют множество новых возможностей, которые рядовому пользователю не понадобится. Многие
+   из этих расширений оформлены неаккуратно и путают код. В то же время оригинальный исходный код
+   cron в исполнении Пола Викси же читать - одно удовольствие.
+
+   Поэтому разбор устройства cron я решил провести на примере общей для обоих ветвей развития
+   программы - Vixie cron 3.0pl1.
 
 ** TODO Выводы
 
