--- a/everything-about-cron-post.org
+++ b/everything-about-cron-post.org
@@ -1,11 +1,28 @@
-* Cron: история, популярные версии, использование и устройство
-** TODO Аннотация
+* Cron и Linux: история, использование и устройство
+** Аннотация
 
-   TODO: Сослаться на статью Алексея.
-   TODO: красивая цитата
-   TODO: BI и старые юниксовые утилиты
+   Не так давно в нашем блоге была опубликова [[https://habr.com/ru/company/badoo/blog/465021/][статья]] о том, как можно исследовать переменные
+   окружения при запуске задач cron. Еще до публикации статьи на Хабре с автором у нас была
+   интересная дискуссия о том, как именно cron формирует и запускает процессы задач, по результатам
+   которой я понял, что не все понимаю в cron.
 
-** TODO Содержание
+   Традиционные утилиты Unix - одновременна моя слабость и ежедневная рутина, поэтому было
+   совершенно естественно заняться cron поплотнее. Так родилась эта статья, при написании которой я
+   ознакомился с POSIX crontab, основными вариантами cron в популярных дистрибутивах Linux и
+   устройством некоторых из них.
+
+   Используете Linux и запускаете задачи в cron? Вам интересна архитектура системных приложений в
+   Unix? Тогда нам с вам по пути.
+
+** Содержание
+
+  - [[#происхождение-видов][Происхождение видов]]
+  - [[#posix-crontab][POSIX crontab]]
+  - [[#хит-продаж---vixie-cron-30pl1][Хит продаж - Vixie cron 3.0pl1]]
+  - [[#cron-в-debian-и-ubuntu][cron в Debian и Ubuntu]]
+  - [[#cronie-в-redhat-fedora-и-centos][cronie в RedHat, Fedora и CentOS]]
+  - [[#устройство-vixie-cron][Устройство Vixie cron]]
+  - [[#послесловие][Послесловие]]
 
 ** Происхождение видов
 
@@ -126,8 +143,8 @@
 
 ** Хит продаж - Vixie cron 3.0pl1
 
-   Общий предок популярных вариантов cron - Vixie cron 3.0pl1, опубликованный в comp.sources.unix.
-   Основные возможности этой версии мы и рассмотрим подробней.
+   Общий предок популярных вариантов cron - Vixie cron 3.0pl1, опубликованный в comp.sources.unix в
+   1992 году. Основные возможности этой версии мы и рассмотрим подробней.
 
    Vixie cron поставляется в двух программах (cron и crontab). Демон cron отвечает за чтение и
    запуск задач из системной таблицы задач и таблиц задач отдельных пользователей. Утилита crontab -
@@ -256,25 +273,321 @@
    оболочка bash запускается в POSIX-совместимом режиме, и *не читает* никакой дополнительной
    конфигурации - работает в неинтерактивном режиме.
 
-** TODO Устройство Vixie cron
+** Устройство Vixie cron
 
-   TODO: original once per minute -> williams -> once per minute again (cronie and inotify?)
-   TODO: job collection into a unified table
-   TODO: main loop and time correction
-   TODO: job launch procedure
-   TODO: @reboot
-   TODO: pid
-
-   Современные потомки cron по сравнению с Vixie cron не изменились радикально, но все же
-   представляют множество новых возможностей, которые рядовому пользователю не понадобится. Многие
-   из этих расширений оформлены неаккуратно и путают код. В то же время оригинальный исходный код
-   cron в исполнении Пола Викси же читать - одно удовольствие.
+   Современные потомки cron по сравнению с Vixie cron не изменились радикально, но все же включают в
+   себя множество новых возможностей, не требующихся для понимая принципов работы программы. К тому
+   же многие из этих расширений оформлены неаккуратно и путают код. В то же время оригинальный
+   исходный код cron в исполнении Пола Викси читать одно удовольствие.
 
    Поэтому разбор устройства cron я решил провести на примере общей для обоих ветвей развития
-   программы - Vixie cron 3.0pl1.
+   программы - Vixie cron 3.0pl1. Примеры я упрощу, убрав усложняющие чтение ifdef-ы и
+   опустив второстепенные детали.
 
-** TODO Выводы
+   Работу демона можно разделить на несколько аспектов:
 
-   TODO: альтернативы
+   1. Инициализация программы.
 
-   TODO: указать, что надо обращаться к документации каждой из платформ
+   2. Сбор и обновление списка задач для запуска.
+
+   3. Работа главного цикла cron.
+
+   4. Запуск задачи
+
+   Разберем их по порядку.
+
+*** Инициализация
+
+    При запуске после тривальной проверки аргументов процесса cron устанавливает обработчики
+    сигналов SIGCHLD и SIGHUP. Первый обработчик вносит в лог запись о завершении работы дочернего
+    процесса, второй - закрывает файловый дескриптор файла-лога:
+
+    #+BEGIN_SRC c
+    signal(SIGCHLD, sigchld_handler);
+    signal(SIGHUP, sighup_handler);
+    #+END_SRC
+
+    Демон cron в системе всегда работает один, только в роли суперпользователя и из главной
+    директории cron. Следующие вызовы создают файл-лок с pid-ом процесса-демона, убеждаются, что
+    пользователь правильный и меняют текущую директорию на главную:
+
+    #+BEGIN_SRC c
+    acquire_daemonlock(0);
+    set_cron_uid();
+    set_cron_cwd();
+    #+END_SRC
+
+    Выставляется путь по умолчанию, который будет использоваться при запуске процессов:
+
+    #+BEGIN_SRC c
+    setenv("PATH", _PATH_DEFPATH, 1);
+    #+END_SRC
+
+    Дальше процесс "демонизируется": создает дочернюю копию процесса вызовом fork и создает новую
+    сессию в дочернем процессе (setsid). В родительском процессе надобности нет и он завершает
+    работу:
+
+    #+BEGIN_SRC c
+    switch (fork()) {
+    case -1:
+        /* критическая ошибка и завершение работы */
+        exit(0);
+    break;
+    case 0:
+        /* дочерний процесс */
+        (void) setsid();
+    break;
+    default:
+        /* родительский процесс завершает работу */
+        _exit(0);
+    }
+
+    #+END_SRC
+
+    Смерть родительского процесса высвобождает лок на файле-локе, кроме того требуется обновить pid
+    в файле на дочерний. После этого заполняется база данных с задачи:
+
+    #+BEGIN_SRC c
+      /* повторный захват лока */
+      acquire_daemonlock(0);
+
+      /* Заполнение БД  */
+      database.head = NULL;
+      database.tail = NULL;
+      database.mtime = (time_t) 0;
+      load_database(&database);
+    #+END_SRC
+
+    Дальше cron переходит к главному циклу работы. Но перед этим стоит взглянуть на загрузку списка
+    задач.
+
+*** Сбор и обновление списка задач
+
+    За загрузку списк задач отвечает функция load_database. Она проверяет главный системный crontab
+    и директорию с пользовательскими файлами. Если файлы и директория не менялись, то список задач
+    не перечитывается. В противном случае заново начинает формироваться новый список задач.
+
+    Загрузка системного файл со специальными именами файла и таблицы:
+
+    #+BEGIN_SRC c
+    /* если время модификации положительная, то файл не менялся */
+    if (syscron_stat.st_mtime) {
+        process_crontab("root", "*system*",
+        SYSCRONTAB, &syscron_stat,
+        &new_db, old_db);
+    }
+    #+END_SRC
+
+    Загрузка пользовательских таблиц в цикле:
+
+    #+BEGIN_SRC c
+    while (NULL != (dp = readdir(dir))) {
+        char	fname[MAXNAMLEN+1],
+        	tabname[MAXNAMLEN+1];
+        /* читать файлы с точкой не надо*/
+        if (dp->d_name[0] == '.')
+        	continue;
+        (void) strcpy(fname, dp->d_name);
+        sprintf(tabname, CRON_TAB(fname));
+        process_crontab(fname, fname, tabname,
+        		&statbuf, &new_db, old_db);
+    }
+
+    #+END_SRC
+
+    После чего старая БД подменяется новой.
+
+    В примерах выше вызов функции process_crontab убеждается в существовании пользователя,
+    соответствующего имени файла таблицы (если только это не суперпользователь), после чего вызывает
+    load_user. Последняя уже читает сам файл построчно:
+
+    #+BEGIN_SRC c
+    while ((status = load_env(envstr, file)) >= OK) {
+        switch (status) {
+        case ERR:
+            free_user(u);
+            u = NULL;
+            goto done;
+        case FALSE:
+            e = load_entry(file, NULL, pw, envp);
+            if (e) {
+                e->next = u->crontab;
+                u->crontab = e;
+            }
+            break;
+        case TRUE:
+            envp = env_set(envp, envstr);
+            break;
+        }
+    }
+    #+END_SRC
+
+    Здесь либо выставляется переменная окружения (строки вида VAR=value) функциями load_env/env_set,
+    либо читается описание задачи (* * * * * /path/to/exec) функцией load_entry.
+
+    Сущность entry, которую возвращает load_entry, это и есть наша задача, помещаемая в общий список
+    задач. В самой функции проводится многословный разбор формата времени, нам же интересней
+    формирование переменных окружения и параметров запуска задачи:
+
+    #+BEGIN_SRC c
+    /* пользователь и группа для запуска задачи берутся passwd*/
+    e->uid = pw->pw_uid;
+    e->gid = pw->pw_gid;
+
+    /* шелл по умолчанию (/bin/sh), если пользователь не указал другое */
+    e->envp = env_copy(envp);
+    if (!env_get("SHELL", e->envp)) {
+        sprintf(envstr, "SHELL=%s", _PATH_BSHELL);
+        e->envp = env_set(e->envp, envstr);
+    }
+    /* домашняя директория */
+    if (!env_get("HOME", e->envp)) {
+        sprintf(envstr, "HOME=%s", pw->pw_dir);
+        e->envp = env_set(e->envp, envstr);
+    }
+    /* путь для поиска прогрмм */
+    if (!env_get("PATH", e->envp)) {
+        sprintf(envstr, "PATH=%s", _PATH_DEFPATH);
+        e->envp = env_set(e->envp, envstr);
+    }
+    /* имя пользовтеля всегда из passwd */
+    sprintf(envstr, "%s=%s", "LOGNAME", pw->pw_name);
+    e->envp = env_set(e->envp, envstr);
+    #+END_SRC
+
+    Со актуальным списком задач и работает главный цикл.
+
+*** Главный цикл
+
+    Оригинальный cron из Version 7 Unix работал совсем просто: в цикле перечитывал конфигурацию,
+    запускал суперпользователем задачи текущей минуты и спал до начала следующей минуты. Этот
+    простой подход на старых машинах требовал слишком много ресурсов.
+
+    В SysV была предложена альтернативная версия, в которой демон засыпал либо до ближайшей минуты,
+    для которой определена задача, либо на 30 минут. Ресурсов на перечитывание конфигурации и
+    проверку задач в таком режиме потреблялось меньше, но быстро обновлять список задач стало
+    неудобно.
+
+    Vixie cron вернулся к простейшей проверке конфигурации и задач раз в минуту, благо к концу 80-х
+    ресурсов на стандартных Unix-машинах стало значительно больше:
+
+    #+BEGIN_SRC c
+    /* первичная загрузка задач */
+    load_database(&database);
+    /* запустить задачи, поставленные к выполнению после перезагрузки системы */
+    run_reboot_jobs(&database);
+    /* сделать TargetTime началом ближайшей минуты */
+    cron_sync();
+    while (TRUE) {
+        /* выполнить задачи, после чего спать до TargetTime с поправкой на время, потраченное на задачи */
+        cron_sleep();
+
+        /* перечитать конфигурацию */
+        load_database(&database);
+
+        /* собрать задачи для данной минуты */
+        cron_tick(&database);
+
+        /* перевести TargetTime на начало следующей минуты */
+        TargetTime += 60;
+    }
+
+    #+END_SRC
+
+    Непосредственно выполнением задач занимается функция cron_sleep, вызывающая функции job_runqueue
+    (перебор и запуск задач) и do_command (запуск каждой отдельной задачи). Последнюю функцию стоит
+    разобрать подробней.
+
+*** Запуск задачи
+
+    Функция do_command исполнена в хорошем Unix-стиле, то есть для асинхронного выполнения задачи
+    она делает fork. Родительский процесс продолжает запуск задач, дочерний занимается подготовкой
+    процесса задачи:
+
+    #+BEGIN_SRC c
+    switch (fork()) {
+    case -1:
+        /*не смогли выполнить fork */
+        break;
+    case 0:
+        /* дочерний процесс: на всякий случай еще раз пробуем захватить главный лок */
+        acquire_daemonlock(1);
+        /* переходим к формированию процесса задачи */
+        child_process(e, u);
+        /* по завершению дочерний процесс заканчивает работу */
+        _exit(OK_EXIT);
+        break;
+    default:
+        /* родительский процесс продолжает работу дальше */
+        break;
+    }
+    #+END_SRC
+
+    В child_process довольно много логики: она принимает стандартные потоки вывода и ошибок на себя,
+    чтобы потом переслать на почту (если для задачи указана переменная окружения MAILTO), и,
+    наконец, ждет завершения работы основного процесса задачи.
+
+    Процесс задачи формируется еще одним fork:
+
+    #+BEGIN_SRC c
+    switch (vfork()) {
+    case -1:
+        /* при ошибки сразу завершается работа */
+        exit(ERROR_EXIT);
+    case 0:
+        /* процесс-внук формирует новую сессию, терминал и т.д.
+         */
+        (void) setsid();
+
+        /*
+         * дальше многословная настройка вывода процесса, опустим здесь для краткости
+         */
+
+        /* смена директории, пользователя и группы пользователя,
+         * *то есть процесс больше не суперпользовательский
+         */
+        setgid(e->gid);
+        setuid(e->uid);
+        chdir(env_get("HOME", e->envp));
+
+        /* запуск самой команды
+         */
+        {
+            /* переменная окружения SHELL указывает на интерпретатор для запуска */
+            char    *shell = env_get("SHELL", e->envp);
+
+            /* процесс запускается без передачи окружения родительского процесса,
+             * то именно так, как описано в таблице задач пользователя  */
+            execle(shell, shell, "-c", e->cmd, (char *)0, e->envp);
+
+            /* ошибка и процесс на запустился? завершение работы */
+            perror("execl");
+            _exit(ERROR_EXIT);
+        }
+        break;
+    default:
+        /* сам процесс продолжает работу: ждет завершения работы и вывода */
+        break;
+    }
+    #+END_SRC
+
+    Вот, в общем-то, и весь cron. Какие-то интересные детали, например учет удаленных пользователей,
+    я опустил, но самое главное изложил.
+
+** Послесловие
+
+   Cron - на удивление простая и полезная программа, выполненная в лучших традициях мира Unix. Она
+   не делает ничего лишнего, но свою работу выполняет замечательно на протяжении уже нескольких
+   десятилетий. Ознакомление с кодом той версии, что поставляется с Ubuntu, у меня заняло не больше
+   часа, а удовольствия я получил массу! Надеюсь, этой радостью я смог поделиться и с читателями
+   Хабра.
+
+   Не знаю как вам, но мне немного грустно осознавать, что современное программирование, с его
+   склонностью с переусложнению всего и вся, уже давно не располагает к подобной простоте.
+
+   Существует множество современных альтернатив: systemd-timers позволяют организовать намного более
+   сложные системы с зависимостями, fcron позволяет гибче регулирует потребление ресурсов задачами и
+   многие другие. Но лично мне всегда хватало простейших crontab.
+
+   Словом, любите Unix, используйте простые программы и не забывайте читать маны для вашей
+   платформы!
